--- a/KeilProject/.gitignore
+++ b/KeilProject/.gitignore
@@ -1,7 +1,5 @@
 /Debug/
-/QProject0000_STM32F103ZET6.dep
-/QProject0000_uvopt.bak
-/QProject0000_uvproj.bak
-/QProject0000.uvgui_Q.bak
-/QProject0000.uvgui.Q
+/QProject0000_*.dep
+/QProject0000*.bak
+/QProject0000.uvgui.*
 /QProject0000.uvopt
