实时散点图已成功实现，测试程序已通过。

--- a/UPPER/UPPER/UPPER.csproj
+++ b/UPPER/UPPER/UPPER.csproj
@@ -46,6 +46,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="RTGraphGenerator.partial.cs" />
+    <Compile Include="RTGraphGenerator.cs" />
     <Compile Include="SerialMessage.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
